# DeepDoc

./: .env.example  .gitignore  API_README.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  INSTALL.md  README.md  USAGE.md  config.example.yaml  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt
src/api/: __init__.py  main.py
src/api/core/: __init__.py  config_manager.py  task_manager.py
src/api/models/: __init__.py  requests.py  responses.py
src/api/routes/: __init__.py  analyze.py  config.py  docs.py  status.py  summary.py
src/api/services/: __init__.py  documentation_service.py
src/docgen/: __init__.py  cli.py
src/docgen/analyzers/: __init__.py  code_analyzer.py  dependency_parser.py
src/docgen/core/: __init__.py  config.py  llm_client.py  scanner.py  workflow.py
src/docgen/generators/: __init__.py  doc_writer.py
src/docgen/utils/: markdown_enhancer.py  notifier.py  seo_optimizer.py
tests/: __init__.py
tests/api/: test_analyze.py  test_config.py  test_docs_summary.py  test_main.py  test_status.py
